--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
-  }
+  },
+  "description": "Clock App",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
